[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/items/apple/color.png" type="Texture" id=1]
[ext_resource path="res://assets/items/apple/line.png" type="Texture" id=2]
[ext_resource path="res://scripts/items/Item.gd" type="Script" id=3]

[node name="Item" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PersistSprite" type="Sprite" parent="."]

[node name="LineSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
